# TinyPLYLoader

./: .gitmodules  CMakeLists.txt  README.md
assets/: box_per_vertex_scalar.ply  sphere_per_face_scalar.ply
src/: main.cpp  ply_loader.cpp  ply_loader.h
